--- a/index.html
+++ b/index.html
@@ -2,17 +2,19 @@
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">  
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Você decide o futuro da IA</title>
 </head>
 <body>
-    <div class="caixa-principal"></div>
-    <h1>Você decide o futuro da IA</h1>
-    <div class="caixa-perguntas"></div>
-    <div class="caixas-alternativas"></div>
-    <div class="caixa-de-resultado"></div>
-    <p class="texto-resultado"></p>
+    <div class="caixa-principal">
+        <h1>Você decide o futuro da IA</h1>
+        <div class="caixa-perguntas"></div>
+        <div class="caixa-alternativas"></div>
+        <div class="caixa-resultado">
+            <p class="texto-resultado"></p>
+        </div>
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
